--- a/public/singup.html
+++ b/public/singup.html
@@ -1,9 +1,29 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Example</title>
-    </head>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Maryville Hub</title>
+    <link rel="stylesheet" type="text/css" href="homecss.css">
+</head>
+
+<body>
+    <title>Login Page</title>
+
     <body>
-        <p>This is an example of a simple HTML page with one paragraph.</p>
+        <div class="container">
+            <div class="login-container">
+                <img src="logo.png" class="logo">
+                <h2>Login</h2>
+                <form action="/submit-login" method="post">
+                    <input type="text" id="username" name="username" placeholder="Username" required>
+                    <input type="password" id="password" name="password" placeholder="Password" required>
+                    <h3 id>Create an account</h3>
+                    <input type="submit" value="Login">
+                </form>
+            </div>
+        </div>
     </body>
+
 </html>
