--- a/public/singup.html
+++ b/public/singup.html
@@ -3,24 +3,24 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maryville Hub</title>
-    <link rel="stylesheet" type="text/css" href="homecss.css">
+    <link rel="stylesheet" type="text/css" href="singupcss.css">
 </head>
 
 <body>
-    <title>Login Page</title>
+    <title>Singup Page</title>
 
     <body>
         <div class="container">
-            <div class="login-container">
-                <img src="logo.png" class="logo">
-                <h2>Login</h2>
-                <form action="/submit-login" method="post">
-                    <input type="text" id="username" name="username" placeholder="Username" required>
+            <div class="singup-container">
+                <h2>Create account</h2>
+                <form action="/User" method="post" id="signupForm">
+                    <input type="text" id="firstname" name="firstname" placeholder="First name" required>
+                    <input type="text" id="lastname" name="lastname" placeholder="Last name" required>
+                    <input type="text" id="email" name="email" placeholder="Email" required>
                     <input type="password" id="password" name="password" placeholder="Password" required>
-                    <h3 id>Create an account</h3>
-                    <input type="submit" value="Login">
+                    <input type="password" id="confirmpass" name="confirmpass" placeholder="Confirm password" required>
+                    <input type="submit" id="submit" value="Sign up">
                 </form>
             </div>
         </div>
