--- a/public/login.html
+++ b/public/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maryville Hub</title>
-    <link rel="stylesheet" type="text/css" href="homecss.css">
+    <link rel="stylesheet" type="text/css" href="logincss.css">
 </head>
 
 <body>
@@ -16,13 +16,13 @@
             <div class="login-container">
                 <img src="logo.png" class="logo">
                 <h2>Login</h2>
-                <form action="/submit-login" method="post">
+                <form action="/Login" method="post" id="loginForm">
                     <input type="text" id="username" name="username" placeholder="Username" required>
                     <input type="password" id="password" name="password" placeholder="Password" required>
                     <a href="singup.html">
                         <h3 id>Create an account</h3>
                     </a>
-                    <input type="submit" value="Login">
+                    <input type="submit" id="loginSubmit" value="Login">
                 </form>
             </div>
         </div>
