Handle User Sessions

--- a/public/profile.html
+++ b/public/profile.html
@@ -113,7 +113,9 @@
                 <h5>John Doe, born on May 15, 1980, in Springfield, Illinois, has always been a figure of inspiration and innovation. Growing up in a modest family, John showed an early interest in technology and science. He excelled in academics, particularly in mathematics and physics, which paved the way for his future endeavors. John’s passion for learning and his relentless curiosity led him to pursue a degree in Computer Science at the University of Illinois, where he graduated with honors. His college years were marked by remarkable achievements, including the development of a unique software program that won him the prestigious University Innovators Award.</h5>
             </div>
 
-            <input type="submit" id="logout" value="Logout" class="logout">
+            <form action="/Logout" method="post">
+                <input type="submit" id="logout" value="Logout" class="logout">
+            </form>
         </div>
     </div>
 </body>
