Connect backend and front end for Profile screen

--- a/public/home.html
+++ b/public/home.html
@@ -28,7 +28,7 @@
 
                 <script>
                     document.getElementById('profileCard').addEventListener('click', function () {
-                        window.location.href = '/Profile';
+                        window.location.href = '/ProfileScreen';
                     });
                 </script>
 
